# orion-sdk

./: .gitignore  CMakeLists.txt  GenerateOrionPublicPacket.sh  GenerateOrionPublicPacketLinux.sh  GenerateOrionPublicPacketLinux_arm.sh  GenerateOrionPublicPacketLinux_x64.sh  GenerateOrionPublicPacketLinux_x86.sh  GenerateOrionPublicPacketWin.bat  License.txt  Makefile  Orion-Wireshark.lua  OrionPublic.html  Public.pro  Public.sln  Readme.markdown  Readme.md  common.mk
Communications/: CMakeLists.txt  Communications.pro  Makefile  OrionComm.c  OrionComm.h  OrionComm.vcxproj  OrionComm.vcxproj.filters  OrionCommLinux.c  OrionCommWindows.c  OrionPublicProtocol.xml
Communications/compare/: compareOrionPublic.cpp  compareOrionPublic.h  printOrionPublic.cpp  printOrionPublic.h
Examples/: CMakeLists.txt  Examples.mk  Examples.pro  Examples.sln  Makefile
Examples/CameraInfo/: CMakeLists.txt  CameraInfo.pro  CameraInfo.vcxproj  CameraInfo.vcxproj.filters  Readme.md
Examples/EncodeDecode/: CMakeLists.txt  EncodeDecode.pro  EncodeDecode.vcxproj  EncodeDecode.vcxproj.filters  Makefile  Readme.md
Examples/GeoPoint/: CMakeLists.txt  GeoPoint.c  GeoPoint.pro  GeoPoint.vcxproj  GeoPoint.vcxproj.filters  Makefile  Readme.md
Examples/GpsAndHeading/: CMakeLists.txt  GpsAndHeading.c  GpsAndHeading.pro  GpsAndHeading.vcxproj  GpsAndHeading.vcxproj.filters  Makefile  Readme.md
Examples/LineOfSight/: CMakeLists.txt  LineOfSight.c  LineOfSight.h  LineOfSight.pro  LineOfSight.vcxproj  LineOfSight.vcxproj.filters  Makefile  Readme.md  get_tile.sh
Examples/LinuxComm/: LinuxComm.c  LinuxComm.h  Makefile
Examples/Orion/: Makefile  Orion.c
Examples/PathTrack/: CMakeLists.txt  Makefile  PathTrack.c  PathTrack.pro  PathTrack.vcxproj  PathTrack.vcxproj.filters  Readme.md
Examples/SendCommand/: CMakeLists.txt  Makefile  Readme.md  SendCommand.c  SendCommand.pro  SendCommand.vcxproj  SendCommand.vcxproj.filters
Examples/SendConfig/: CMakeLists.txt  Readme.md  SendConfig.c  SendConfig.pro  SendConfig.vcxproj  SendConfig.vcxproj.filters
Examples/TrackSize/: CMakeLists.txt  Readme.md  TrackSize.c  TrackSize.pro  TrackSize.vcxproj  TrackSize.vcxproj.filters
Examples/TrackerFeed/: TrackerFeed.c
Examples/TrackerFeed/x86/: TrackerFeed
Examples/UserData/: CMakeLists.txt  Readme.md  UserData.c  UserData.pro  UserData.vcxproj  UserData.vcxproj.filters
Examples/VideoPlayer/: CMakeLists.txt  FFmpeg.c  FFmpeg.h  KlvParser.c  KlvParser.h  KlvTree.c  KlvTree.h  Makefile  Readme.md  StreamDecoder.c  StreamDecoder.h  VideoPlayer.c  VideoPlayer.pro
Examples/WindowsComm/: WindowsComm.c  WindowsComm.h
Protogen/: Protogen.sh  ProtogenBuild.md
Protogen/Linux/: ProtoGen
Protogen/Linux/aarch64/: ProtoGen  ProtoGen.html  fix_protogen_links.sh  libQt5Xml.so.5
Protogen/Linux/arm/: ProtoGen  ProtoGen.sh
Protogen/Linux/x64/: ProtoGen  ProtoGen.html  ProtoGen.sh  libQt5Xml.so.5
Protogen/Linux/x86/: ProtoGen  ProtoGen.sh  libQt5Xml.so.5  libicui18n.so.53  libicuuc.so.53
Protogen/Mac/: ProtoGen  QtXml
Protogen/Mac/ProtoGen.app/Contents/: Info.plist
Protogen/Mac/ProtoGen.app/Contents/Frameworks/QtXml.framework/Versions/5/: QtXml
Protogen/Mac/ProtoGen.app/Contents/Frameworks/QtXml.framework/Versions/5/Resources/: Info.plist
Protogen/Mac/ProtoGen.app/Contents/MacOS/: ProtoGen
Protogen/Windows/: LICENSE.txt  ProtoGen.html  ProtoGen.txt  exampleprotocol.xml
Utils/: CMakeLists.txt  Constants.h  GeolocateTelemetry.c  GeolocateTelemetry.h  GpsDataReceive.c  Makefile  OrionPacketShim.h  OrionPublicPacketShim.c  OrionPublicPacketShim.h  OrionUtils.vcxproj  OrionUtils.vcxproj.filters  TrilliumPacket.c  TrilliumPacket.h  Types.h  Utils.pro  dcm.c  dcm.h  earthrotation.c  earthrotation.h  linearalgebra.c  linearalgebra.h  mathutilities.c  mathutilities.h  quaternion.c
wireshark/: Orion-Wireshark.lua  trillium.fdesc  trillium.wsgd
